# pyberryplc-platform

./: .gitignore  README.md  pyproject.toml  requirements.txt
demo_stepper/: stepper_motor05.py  stepper_motor06.py  tmc2208_uart_debug.py
demo_stepper_nicegui/: hmi_app.py  plc_app.py  start.py
demo_stepper_nicegui_oop/: hmi_app.py  plc_app.py  start.py
demos/demo_01/: fixed_angle.py  fixed_angle.sh  readme.md
demos/demo_02/: blocking_motion_profile.py  blocking_motion_profile.sh  readme.md
demos/demo_03/: nonblocking_motion_profile.py  nonblocking_motion_profile.sh  readme.md
demos/demo_04/: dynamic_motion_profile.py  dynamic_motion_profile.sh  readme.md
demos/demo_05/: multi_axis.py  multi_axis.sh  readme.md  stepper_current_setting.py
demos/demo_06/: readme.md  trajectory.json  trajectory_execution.py  trajectory_execution.sh  trajectory_planning.py
demos/demo_07/: cnc_machine.py  cnc_machine.sh  motor_config.toml  readme.md
demos/demo_08/: hmi.py  motor_config.toml  plc.py
demos/demo_08b/: hmi.py  main.py  motor_config.toml  plc.py
demos/demo_09/: loading_station.py  main.py  multi_operation_machine.py  readme.md  run_with_keyboard.sh  stepper_driver.py
demos/demo_10/: architecture.md  readme.md
demos/demo_multi_machine/: main.py  multi_station_machine.py  stepper_driver.py
demos/demo_rattmmotorCNC1610Pro/: current_analysis.py  current_setting.py  demo_01.py  main.py  motion_profile.py  motor_config.toml  motorcurrent_setting.py  (+3 more)
plc_server/: main.py  plc_server_framework.py
tests/: motion_profile_test.py  xy_motion.py
(+108 files in other folders)
