[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyberryplc"
version = "0.1.0"
description = "Python softPLC development platform for Raspberry Pi"
authors = [{ name = "Tom Christiaens", email = "mailbox.tom.chr@gmail.com" }]
dependencies = [
    "gpiozero==2.0.1",
    "keyboard==0.13.5",
    "matplotlib==3.10.3",
    "nicegui==2.16.0",
    "pigpio==1.78",
    "pip==25.0.1",
    "plotly==6.0.1",
    "pyserial==3.5",
    "python-decouple==3.8",
    "scipy==1.15.2",
    "scipy-stubs==1.16.0.2",
    "wheel==0.45.1"
]
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["."]
